Ajout des chemin html

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 			<h1 id="logo">Philippe Vandenbrande / Menuisier & Charpentier</h1>
 			<nav role="navigation" id="menu">
 				<ul class="fst">
-					<li><a href="https://www.cochetpais.com/fr/a-propos-du-site-18">A propos</a></li>
-					<li><a href="https://www.cochetpais.com/fr/projets">Projets</a></li>
-					<li><a href="https://www.cochetpais.com/fr/equipe">Notre Histoire</a></li>
-					<li><a href="https://www.cochetpais.com/fr/contact">Contact</a></li>
+					<li><a href="./propos.html">A propos</a></li>
+					<li><a href="./projets.html">Projets</a></li>
+					<li><a href="./histoire.html">Histoire</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
