--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<span></span>
 				</i>
 			</a>
-			<h1 id="logo">Philippe Vandenbrande / Menuisier & Charpentier</h1>
+			<h1 id="logo"><img class="lo" src="image/logophil2.png" alt="logo philippe vandenbrande"></h1>
 			<nav role="navigation" id="menu">
 				<ul class="fst">
 					<li><a href="./propos.html">A propos</a></li>
@@ -108,36 +108,25 @@
 		</header>
 		<!-- content-->
 		<main role="main">
-			<div id="home_slider" class="cycle-slideshow" data-cycle-fx="fade" data-cycle-slides=".slide" data-cycle-timeout="5000" data-cycle-speed="1000" data-cycle-log="false" data-cycle-caption="#sliderCaption" data-cycle-caption-template="&lt;h2&gt;{{caption}}&lt;/h2&gt;" style="overflow: hidden; position: relative;">
-				<div class="slide cycle-slide cycle-sentinel" data-caption="Un savoir-faire unique forgé avec le temps 
-                &lt;l'experience&gt;
-                et la 
-                &lt;passion&gt; d'un véritable artisan" style="position: static; top: 0px; left: 0px; z-index: 100; opacity: 1; display: block; visibility: hidden;">
-					<img src="./image/menuiserie2.jpg" alt="" style="position: absolute; visibility: hidden; top: -99px; left: 0px; width: 1536px; height: 864px;">
-				</div>
+			<div id="home_slider" class="cycle-slideshow" data-cycle-fx="fade" data-cycle-slides=".slide" data-cycle-timeout="3000" data-cycle-speed="1000" data-cycle-log="false" data-cycle-caption="#sliderCaption" data-cycle-caption-template="&lt;h2&gt;{{caption}}&lt;/h2&gt;" style="overflow: hidden; position: relative;">
 				<div id="sliderCaption">
 					<h2>
-						Un savoir-faire unique forgé avec le temps 
-						<strong> l'experience</strong>
-						et la 
-						<strong>passion</strong> d'un véritable artisan
 					</h2>
 				</div>
-				<div class="slide cycle-slide" data-caption="L&#39;art&lt;/strong&gt; du bois vient avec la patience et la sagesse. Chaque geste compte, chaque mouvement trouve sa place pour que l'ensemble prenne &lt;vie&gt;. Le bois est  &lt;la plus noble des matière&gt; de par sa nature et son histoire." style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden;">
+				<div class="slide cycle-slide" data-caption="L&#39;art du bois vient avec la patience et la sagesse. Chaque geste compte, chaque mouvement trouve sa place pour que l'ensemble prenne vie. Le bois est  la plus noble des matière de par sa nature et son histoire." style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden;">
 					<img src="./image/menuiserie1.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
-					<!-- 
-					<h2>
-						<strong>L'art</strong>
-						 véritable n’est pas seulement l’expression d’un sentiment, mais aussi le résultat 
-						<strong>d’une vive intelligence</strong>
-					</h2>
-					 -->
 				</div>
-				<div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps 
-                &lt;l'experience&gt;
-                et la 
+				<div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la 
+                passion d'un véritable artisan" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
+					<img src="./image/menuiserie2.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
+                </div>
+                <div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la 
                 passion d'un véritable artisan" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
 					<img src="./image/menuiserie3.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
+                </div>
+                <div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la 
+                passion d'un véritable artisan" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
+					<img src="./image/menuiserie4.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
 				</div>
 			</div>
 		</main>
