Ajout de la page A propos

--- a/index.html
+++ b/index.html
@@ -16,17 +16,10 @@
 		<meta name="country" content="Belgique">
 		<title>Accueil | Philippe Vandenbrande</title>
 		<!-- Favicons -->
-		<link rel="apple-touch-icon" sizes="180x180" href="https://www.cochetpais.com/images/favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="https://www.cochetpais.com/images/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="https://www.cochetpais.com/images/favicon/favicon-16x16.png">
-		<link rel="manifest" href="https://www.cochetpais.com/images/favicon/site.webmanifest">
-		<link rel="mask-icon" href="https://www.cochetpais.com/images/favicon/safari-pinned-tab.svg" color="#c92331">
+		<link rel="apple-touch-icon" sizes="180x180" href="./image/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./image/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./image/favicon/favicon-16x16.png">
 		<link rel="shortcut icon" href="https://www.cochetpais.com/images/favicon/favicon.ico">
-		<meta name="apple-mobile-web-app-title" content="Inlex">
-		<meta name="application-name" content="Inlex">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
-		<meta name="theme-color" content="#c92331">
 		<!-- /Favicons -->
 		<link rel="alternate" type="application/rss+xml" title="Cochet / Païs Architecture - actualites" href="https://www.cochetpais.com/fr/feed/actualites">
 		<link rel="stylesheet" href="./css/main.css" type="text/css">
@@ -96,7 +89,7 @@
 					<span></span>
 				</i>
 			</a>
-			<h1 id="logo"><img class="lo" src="image/logophil2.png" alt="logo philippe vandenbrande"></h1>
+			<h1 id="logo"><img class="lodjo" src="image/logophil2.png" alt="logo philippe vandenbrande"></h1>
 			<nav role="navigation" id="menu">
 				<ul class="fst">
 					<li><a href="./propos.html">A propos</a></li>
@@ -108,24 +101,22 @@
 		</header>
 		<!-- content-->
 		<main role="main">
-			<div id="home_slider" class="cycle-slideshow" data-cycle-fx="fade" data-cycle-slides=".slide" data-cycle-timeout="3000" data-cycle-speed="1000" data-cycle-log="false" data-cycle-caption="#sliderCaption" data-cycle-caption-template="&lt;h2&gt;{{caption}}&lt;/h2&gt;" style="overflow: hidden; position: relative;">
+			<div id="home_slider" class="cycle-slideshow" data-cycle-fx="fade" data-cycle-slides=".slide" data-cycle-timeout="5000" data-cycle-speed="1000" data-cycle-log="false" data-cycle-caption="#sliderCaption" data-cycle-caption-template="&lt;h2&gt;{{caption}}&lt;/h2&gt;" style="overflow: hidden; position: relative;">
 				<div id="sliderCaption">
 					<h2>
 					</h2>
 				</div>
-				<div class="slide cycle-slide" data-caption="L&#39;art du bois vient avec la patience et la sagesse. Chaque geste compte, chaque mouvement trouve sa place pour que l'ensemble prenne vie. Le bois est  la plus noble des matière de par sa nature et son histoire." style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden;">
+				<div class="slide cycle-slide" data-caption="L&#39;art du bois vient avec la patience et la sagesse. Chaque geste compte, chaque mouvement trouve sa place pour que l'ensemble prenne vie." style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden;">
 					<img src="./image/menuiserie1.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
 				</div>
 				<div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la 
                 passion d'un véritable artisan" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
 					<img src="./image/menuiserie2.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
                 </div>
-                <div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la 
-                passion d'un véritable artisan" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
+                <div class="slide cycle-slide cycle-slide-active" data-caption="Le bois est  la plus noble des matière de par sa nature et son histoire." style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
 					<img src="./image/menuiserie3.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
                 </div>
-                <div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la 
-                passion d'un véritable artisan" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
+                <div class="slide cycle-slide cycle-slide-active" data-caption="Venez découvrir le véritable artisanat. Mon engagement, votre satisfaction d'un travail unique et sur-mesure" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
 					<img src="./image/menuiserie4.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
 				</div>
 			</div>
