Ajout de chantier photo

--- a/projets.html
+++ b/projets.html
@@ -13,7 +13,7 @@
 		<meta name="robots" content="index, follow">
 		<meta name="city" content="Estaimpuis">
 		<meta name="country" content="Belgique">
-		<title>Mes projets | Philippe Vandenbrande</title>
+		<title>Mes Réalisations | Philippe Vandenbrande</title>
 		<!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="./image/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./image/favicon/favicon-32x32.png">
@@ -425,6 +425,186 @@
 								</p>
 								<p>
 									2017
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/operale/operalea.jpg">
+							<figcaption>
+								<p>
+									Aménagement mur intérieure en panneaux operalles
+								</p>
+								<p>
+									2017
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/bardage3/bardage3a.jpg">
+							<figcaption>
+								<p>
+									Bardage murale
+								</p>
+								<p>
+									2017
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/extension/extensiona.jpg">
+							<figcaption>
+								<p>
+									Extension en ossature en bois
+								</p>
+								<p>
+									2017
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/charpente3/charpente3a.jpg">
+							<figcaption>
+								<p>
+									Réalisation d'une Charpente en L
+								</p>
+								<p>
+									2016
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/grenier/greniera.jpg">
+							<figcaption>
+								<p>
+									Aménagement d'un grenier
+								</p>
+								<p>
+									2016
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/toit2/toit2a.jpg">
+							<figcaption>
+								<p>
+									Charpente avec châssis de toit
+								</p>
+								<p>
+									2016
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/pergola/pergolaa.jpg">
+							<figcaption>
+								<p>
+									Réalisation d'une pergola
+								</p>
+								<p>
+									2016
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/operale2/operale2a.jpg">
+							<figcaption>
+								<p>
+									Plateforme avec bardage operal
+								</p>
+								<p>
+									2016
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/charpente4/charpente4a.jpg">
+							<figcaption>
+								<p>
+									Réalisation d'une Charpente
+								</p>
+								<p>
+									2016
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/cheneau/cheneaua.jpg">
+							<figcaption>
+								<p>
+									Réalisation d'un Cheneau
+								</p>
+								<p>
+									2016
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/charpente5/charpente5a.jpg">
+							<figcaption>
+								<p>
+									Construction d'une charpente
+								</p>
+								<p>
+									2016
+								</p>
+								<p>
+									Estaimpuis
+								</p>
+								<a href="https://www.cochetpais.com/fr/projets/villa/lapeyr%C3%A8re-012"><span>Voir le projet</span></a>
+							</figcaption>
+                        </figure>
+                        <figure class="item">
+							<img src="./image/projets/chassis/chassisa.jpg">
+							<figcaption>
+								<p>
+									Châssis de toit
+								</p>
+								<p>
+									2016
 								</p>
 								<p>
 									Estaimpuis
