Ajout photo profil sur la page a propos

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,9 @@
                         <section class="section_type01 mb050">
                             <h2 class="h2_type09">Téléphone</h2>
                             <ul class="list_contact">
-                                <li class="tel" style="margin-right:0;"><span>(+32) 04 93 71 95 97</span></li>
+                                <a href="tel:06.49.33.98.14" class="calltracker" data-aen="AEN831-1">
+                                    <li class="tel" style="margin-right:0;"><span>(+32) 04 93 71 95 97</span></li>
+                                </a>
                             </ul>
                         </section> <section class="section_type01 mb050">
                         <h2 class="h2_type09">Email</h2>
