--- a/propos.html
+++ b/propos.html
@@ -57,33 +57,38 @@
 			<aside role="complementary"></aside>
 			<div>
 				<section class="wysi">
-					<h1>À propos</h1>
-					<div class="content">
-						<p>
-							&nbsp;
-						</p>
-						<p>
-							<span style="font-size:16px">Depuis plus de 25 ans, je me passsionne pour mon art qu'est le travail, le savoir-faire et la maîtrise de cette matière noble qu'est le bois.&nbsp;</span>
-						</p>
-						<p>
-							<span style="font-size:16px">Nous oeuvrons en belgique ainsi que dans le nord de la France. Principalement dans la région du hainault, de Namur, Brabant Wallon et la belle région des hauts de france (Nord et Nord-pas-de-calais).</span>
-						</p>
-						<p>
-							<span style="font-size:16px">Notre priorité est d'oeuvrer avec enthousiasme et passion pour votre projet afin de la transformer de rêve en réalité.</span>
-						</p>
-						<p>
-							<span style="font-size:16px">Respect des hommes et de l'environnement guide chacune de nos réalisations, nous sommes spécialisé dans la menuiserie, la charpenterie, la pose de portes et parquets et de chassiset escaliers. Vous avez un autre projet en tête, nous restons toujours curieux et disponible afin de le réaliser.</span>
-						</p>
-						<p>
-							<span style="font-size:16px">Vous l'aurez compris, nous mettons à votre disposition toute notre expertise en construction de charpente pour les bâtis neufs, ainsi que dans la rénovation et la restauration, sur tout l’ensemble de la région d'estampuis.</span>
-						</p>
-						<p>
-							<span style="font-size:16px">Que ce soit pour la construction de vos charpentes traditionnelles ou industrielles, nous déployons tout notre savoir-­faire technique, et équipements nécessaires, à la réussite de votre projet de pose de charpente, dans les délais prévus tout en respectant à la lettre nos engagements contractuels et les normes de qualité en vigueur.</span>
-						</p>
-						<p>
-							<span style="font-size:16px">Nous construisons également des projets d’extension en ossature bois pour votre habitat. L’extension consiste à rajouter une pièce supplémentaire (chambre, cuisine, salon, garage, atelier) en augmentant le volume habitable d’un bien existant. De la conception à la réalisation complète de travaux, l’entreprise Filatre charpente vous accompagne dans votre projet.</span>
-						</p>
-					</div>
+                    <h1>À propos</h1>
+                    <div id="flexo">
+                        <div>
+                            <img class="profilphoto" src="./image/phil.jpg" alt="photo philippe vandenbrande">
+                        </div>
+                        <div class="largeur">
+                            <p>
+                                &nbsp;
+                            </p>
+                            <p>
+                                <span style="font-size:16px">Depuis plus de 25 ans, je me passsionne pour mon art qu'est le travail, le savoir-faire et la maîtrise de cette matière noble qu'est le bois.&nbsp;</span>
+                            </p>
+                            <p>
+                                <span style="font-size:16px">Nous oeuvrons en belgique ainsi que dans le nord de la France. Principalement dans la région du hainault, de Namur, Brabant Wallon et la belle région des hauts de france (Nord et Nord-pas-de-calais).</span>
+                            </p>
+                            <p>
+                                <span style="font-size:16px">Notre priorité est d'oeuvrer avec enthousiasme et passion pour votre projet afin de la transformer de rêve en réalité.</span>
+                            </p>
+                            <p>
+                                <span style="font-size:16px">Respect des hommes et de l'environnement guide chacune de nos réalisations, nous sommes spécialisé dans la menuiserie, la charpenterie, la pose de portes et parquets et de chassiset escaliers. Vous avez un autre projet en tête, nous restons toujours curieux et disponible afin de le réaliser.</span>
+                            </p>
+                            <p>
+                                <span style="font-size:16px">Vous l'aurez compris, nous mettons à votre disposition toute notre expertise en construction de charpente pour les bâtis neufs, ainsi que dans la rénovation et la restauration, sur tout l’ensemble de la région d'estampuis.</span>
+                            </p>
+                            <p>
+                                <span style="font-size:16px">Que ce soit pour la construction de vos charpentes traditionnelles ou industrielles, nous déployons tout notre savoir-­faire technique, et équipements nécessaires, à la réussite de votre projet de pose de charpente, dans les délais prévus tout en respectant à la lettre nos engagements contractuels et les normes de qualité en vigueur.</span>
+                            </p>
+                            <p>
+                                <span style="font-size:16px">Nous construisons également des projets d’extension en ossature bois pour votre habitat. L’extension consiste à rajouter une pièce supplémentaire (chambre, cuisine, salon, garage, atelier) en augmentant le volume habitable d’un bien existant. De la conception à la réalisation complète de vos travaux, je vous accompagnerai dans votre projet.</span>
+                            </p>
+                        </div>
+                    </div>
 				</section>
 			</div>
 		</main>
