Correction du menu navbar

--- a/propos.html
+++ b/propos.html
@@ -46,10 +46,10 @@
 			</div>
 			<nav role="navigation" id="menu">
 				<ul class="fst">
+					<li><a href="./index.html">Accueil</a></li>
 					<li><a href="./propos.html">A propos</a></li>
 					<li><a href="./projets.html">Réalisations</a></li>
-					<li><a href="./histoire.html">Histoire</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="./contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
