correction bug scroll up

--- a/projets.html
+++ b/projets.html
@@ -617,8 +617,8 @@
 		</main>
 		<!-- footer -->
 		<footer role="contentinfo">
-			<div>
-				<a href="https://www.cochetpais.com/fr/projets#" class="ontop"><i class="co-chevron-up"></i></a>
+			<div id="scrollUp">
+				<a href="./index.html/projets#" class="ontop"><img src="./image/chevron-up-solid.svg" alt="icone chevron"></a>
 			</div>
 		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js"></script>
@@ -642,7 +642,8 @@
 		<script type="text/javascript" src="./js/nivo-lightbox.min-fr.js"></script>
 		<script type="text/javascript" src="./js/imagesloaded.pkgd.min.js"></script>
 		<script type="text/javascript" src="./js/isotope.pkgd.min.js"></script>
-		<script type="text/javascript" src="./js/front-socle.js"></script>
+        <script type="text/javascript" src="./js/front-socle.js"></script>
+        <script src="to-top.js"></script>
 		<script type="text/javascript">
 			$(function()    {
 				    // Isotope    $('.projets_items').imagesLoaded(function ()        {
