Test link facebook + Correction titre index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<h2>
 					</h2>
 				</div>
-				<div class="slide cycle-slide" data-caption="L&#39;art du bois vient avec la patience et la sagesse. Chaque geste compte, chaque mouvement trouve sa place pour que l'ensemble prenne vie." style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden;">
+				<div class="slide cycle-slide" data-caption="L&#39;art du bois vient avec la patience et la sagesse. Chaque mouvement trouve sa place pour que l'ensemble prenne vie." style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden;">
 					<img src="./image/menuiserie1.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
 				</div>
 				<div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la 
